unified_tests/file_roles/main_entrypoint_in_manifest_file/expect/build.text.stderr
PACKAGE.copp:1:10: error: main is only allowed in .bin.copp files
  function main() -> nil {
           ^
